<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4DFFFFFF"
            android:padding="15dp"
            android:text="@string/error_message"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4DFFFFFF"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#55FFFFFF"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_city_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_name"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/img_search_city"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_search_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_degree"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="65sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4DFFFFFF"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="167dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_city_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/city_code"
                            android:textSize="23sp" />

                        <TextView
                            android:id="@+id/tv_city_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/city_name"
                            android:textSize="17sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/tv_description1"
                            android:layout_width="110dp"
                            android:layout_height="10dp"
                            android:layout_weight="1"
                            android:textAlignment="viewEnd"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/description"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_weather_pictures"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_baseline_cloud_queue_24" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#4DFFFFFF"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_speed" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/latitude" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/longitude" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info" />

                        <TextView
                            android:id="@+id/tv_wind_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info" />

                        <TextView
                            android:id="@+id/tv_lat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info" />

                        <TextView
                            android:id="@+id/tv_lon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

